--- a/style.css
+++ b/style.css
@@ -52,3 +52,53 @@ h1{
 }
 
 
+/*second button*/
+
+.btn-medium {
+  width: 30%;
+ padding: 25px 50px 75px 100px;
+  color: #475ba2;
+ display: inline-block;
+ 
+  /*float:left;*/
+  background-color: #e6eff7;
+  border-color: #2e6da4;
+ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+ 
+}
+.btn-medium:focus,
+.btn-medium.focus {
+  color: #fff;
+  background-color: #286090;
+  border-color: #122b40;
+   
+}
+.btn-medium:hover {
+  color: #fff;
+  background-color: #286090;
+  border-color: #204d74;
+ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
+
+.btn-medium {
+  color: #475ba2;
+  background-color: #e6eff7;
+  border-color: #2e6da4;
+ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+ 
+}
+.btn-medium:focus,
+.btn-medium.focus {
+  color: #fff;
+  background-color: #286090;
+  border-color: #122b40;
+   
+}
+.btn-medium:hover {
+  color: #fff;
+  background-color: #286090;
+  border-color: #204d74;
+ box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
