--- a/style.css
+++ b/style.css
@@ -5,156 +5,92 @@ body{
  -moz-background-size: cover;
   -o-background-size: cover; 
  background-size: cover;
- color: white; 
-
+ color: white;
+ font-size: 100%
 }
-
+/*font for instructions on top*/
 h1{
   color: white;
 
 }
 
-/*button for "x" */
+/*button to select player "x" at start of game  */
 
 .btn-primary {
-  color: #ffffff;
+  color: #000000;
   background-color: #e6eff7;
   border-color: #2e6da4;
- box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
- 
+ box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); 
 }
 
+/*button to select player "x" at start of game  */
 .btn-primary:focus,
 .btn-primary.focus {
-  color: #ffffff;
+  color: #000000;
   background-color: #286090;
   border-color: #122b40; 
- 
 }
+/*hover button to select player "x" at start of game  */
 
 .btn-primary:hover {
-  color: #fff;
+  color: #000000;
   background-color: #286090;
   border-color: #204d74;
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-
-}
-
-/*button for "O" 
-
-.btn-secondary{
- color: #fff;
-}
-
-.btn-secondary:hover {
-  color: #fff;
-}
-
-.btn-secondary:visited {
-{
- color: red;
- 
 }
 
 
-*/
 
-
-
-/*
-.btn-primary {
-  color: #475ba2;
-  background-color: #e6eff7;
-  border-color: #2e6da4;
- box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
- 
-}
-.btn-primary:focus,
-.btn-primary.focus {
-  color: #fff;
-  background-color: #286090;
-  border-color: #122b40;
-   
-}
-.btn-primary:hover {
-  color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
- box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-
-} */
-
-
-
-/*button for board*/
-.btn-medium {
-    
- padding: 50px 50px 50px 50px;
+/*buttons for gameboard*/
+.btn-medium {    
  color: #fff;
  display: inline-block;
- /*float:left;*/
  background: rgba(255,255,255, .1);
+ text-align: center;
+ cursor: pointer;
  border: 1px solid black;
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
  -moz-box-shadow: 8px 8px 15px #000; 
  -webkit-box-shadow: 8px 8px 15px #000;  
  box-shadow: 8px 8px 15px #000;
- cursor: pointer;
- text-align: center;
- font-size: 100px;
+ padding: 50px 50px 50px 50px;
+width: 5%;
+height: 5%;
+
 }
  
 .btn-medium:focus,
 .btn-medium.focus {
-  color: #000;
- border: 1px solid black;
-  background: rgba(255,255,255, .1);
- -moz-box-shadow: 8px 8px 15px #000; 
- -webkit-box-shadow: 8px 8px 15px #000;  
- box-shadow: 8px 8px 15px #000;
- cursor: pointer;
+color: #000;
+ display: inline-block;
+ background: rgba(255,255,255, .1);
  text-align: center;
- font-size: 100px;   
+ cursor: pointer;
+ border: 1px solid black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+ -moz-box-shadow: 8px 8px 15px #000; 
+ -webkit-box-shadow: 8px 8px 15px #000; 
+ box-shadow: 8px 8px 15px #000;
+ padding: 50px 50px 50px 50px;
+
 }
  
 .btn-medium:hover {
   color: #000;
-  background: rgba(255,255,255, .1);
+ display: inline-block;
+ background: rgba(255,255,255, .1);
+ text-align: center;
+ cursor: pointer;
  border: 1px solid black;
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
  -moz-box-shadow: 8px 8px 15px #000; 
  -webkit-box-shadow: 8px 8px 15px #000;  
  box-shadow: 8px 8px 15px #000;
- cursor: pointer;
- text-align: center;
- font-size: 100px;
+ padding: 50px 50px 50px 50px;
 
 }
 
-/*
-.btn-medium {
-  color: #475ba2;
-  background-color: #e6eff7;
-  border-color: #2e6da4;
- box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
- 
-}
-.btn-medium:focus,
-.btn-medium.focus {
-  color: #fff;
-  background-color: #286090;
-  border-color: #122b40;
-   
-}
-.btn-medium:hover {
-  color: #fff;
-  background-color: #286090;
-  border-color: #204d74;
- box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
-}
- */
 
 
 
