--- a/style.css
+++ b/style.css
@@ -39,6 +39,32 @@ h1{
  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
+/*button for "o"*/
+
+.btn-secondary {
+  color: #ffffff;
+ 
+
+ /* background-color: #e6eff7;*/
+ 
+}
+
+/*button to select player "x" at start of game  */
+.btn-secondary:focus,
+.btn-secondary.focus {
+  color: #1cd1e3;
+ background-color: #286090;
+ 
+ 
+}
+/*hover button to select player "x" at start of game  */
+
+.btn-secondary:hover {
+  color: #1cd1e3;
+ background-color: #286090;
+  
+}
+
 
 
 /*buttons for gameboard*/
@@ -89,8 +115,4 @@ color: #000;
  padding: 50px 50px 50px 50px;
 
 }
-
-
-
-
 
